Add Rfid support
